[package]
name = "vector"
version = "0.44.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
description = "A lightweight and ultra-fast tool for building observability pipelines"
homepage = "https://vector.dev"
license = "MPL-2.0"
readme = "README.md"
publish = false
default-run = "vector"
autobenches = false # our benchmarks are not runnable on their own either way
# Minimum supported rust version
# See docs/DEVELOPING.md for policy
rust-version = "1.81"

[[bin]]
name = "vector"
test = false
bench = false

[[bin]]
name = "graphql-schema"
path = "src/api/schema/gen.rs"
test = false
bench = false
required-features = ["default-no-api-client"]

[[bin]]
name = "secret-backend-example"
path = "src/config/loading/secret_backend_example.rs"
test = false
bench = false
required-features = ["secret-backend-example"]

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

# CI-based builds use full release optimization.  See scripts/environment/release-flags.sh.
# This results in roughly a 5% reduction in performance when compiling locally vs when
# compiled via the CI pipeline.
[profile.release]
debug = false # Do not include debug symbols in the executable.

[profile.bench]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[package.metadata.deb]
name = "vector"
section = "admin"
maintainer-scripts = "distribution/debian/scripts/"
conf-files = ["/etc/vector/vector.yaml", "/etc/default/vector"]
assets = [
  ["target/release/vector", "/usr/bin/", "755"],
  ["config/vector.yaml", "/etc/vector/vector.yaml", "644"],
  ["config/examples/*", "/etc/vector/examples/", "644"],
  ["distribution/systemd/vector.service", "/lib/systemd/system/vector.service", "644"],
  ["distribution/systemd/vector.default", "/etc/default/vector", "600"],
  ["licenses/*", "/usr/share/vector/licenses/", "644"],
  ["NOTICE", "/usr/share/vector/NOTICE", "644"],
  ["LICENSE-3rdparty.csv", "/usr/share/vector/LICENSE-3rdparty.csv", "644"],
]
license-file = ["target/debian-license.txt"]
extended-description-file = "target/debian-extended-description.txt"
recommends = "datadog-signing-keys (>= 1:1.4.0)"

[package.metadata.deb.systemd-units]
unit-scripts = "distribution/systemd/"
enable = false
start = false

# libc requirements are defined by `cross`
# https://github.com/rust-embedded/cross#supported-targets
# Though, it seems like aarch64 libc is actually 2.18 and not 2.19
[package.metadata.deb.variants.arm-unknown-linux-gnueabi]
depends = "libc6 (>= 2.15)"

[package.metadata.deb.variants.armv7-unknown-linux-gnueabihf]
depends = "libc6 (>= 2.15)"

[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
depends = "libc6 (>= 2.15)"

[package.metadata.deb.variants.x86_64-unknown-linux-musl]
depends = ""

[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
depends = "libc6 (>= 2.18)"

[package.metadata.deb.variants.aarch64-unknown-linux-musl]
depends = ""

[workspace]
members = [
  ".",
  "lib/codecs",
  "lib/dnsmsg-parser",
  "lib/dnstap-parser",
  "lib/docs-renderer",
  "lib/enrichment",
  "lib/fakedata",
  "lib/file-source",
  "lib/k8s-e2e-tests",
  "lib/k8s-test-framework",
  "lib/loki-logproto",
  "lib/portpicker",
  "lib/prometheus-parser",
  "lib/opentelemetry-proto",
  "lib/tracing-limit",
  "lib/vector-api-client",
  "lib/vector-buffers",
  "lib/vector-common",
  "lib/vector-config",
  "lib/vector-config-common",
  "lib/vector-config-macros",
  "lib/vector-core",
  "lib/vector-lib",
  "lib/vector-lookup",
  "lib/vector-stream",
  "lib/vector-tap",
  "lib/vector-vrl/cli",
  "lib/vector-vrl/functions",
  "lib/vector-vrl/tests",
  "lib/vector-vrl/web-playground",
  "vdev",
]

[workspace.dependencies]
anyhow = "1.0.95"
cfg-if = { version = "1.0.0", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.10.0", default-features = false, features = ["serde"] }
clap = { version = "4.5.26", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
flate2 = { version = "1.0.35", default-features = false, features = ["default"] }
futures = { version = "0.3.31", default-features = false, features = ["compat", "io-compat", "std"], package = "futures" }
glob = { version = "0.3.2", default-features = false }
hickory-proto = { version = "0.24.2", default-features = false, features = ["dnssec"] }
indexmap = { version = "2.7.0", default-features = false, features = ["serde", "std"] }
metrics = "0.24.1"
metrics-tracing-context = { version = "0.17.0", default-features = false }
metrics-util = { version = "0.18.0", default-features = false, features = ["registry"] }
pin-project = { version = "1.1.8", default-features = false }
proptest = { version = "1.5" }
proptest-derive = { version = "0.5.1" }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-build = { version = "0.12", default-features = false }
prost-reflect = { version = "0.14", features = ["serde"], default-features = false }
prost-types = { version = "0.12", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde_json = { version = "1.0.135", default-features = false, features = ["raw_value", "std"] }
serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive", "rc"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures", "std"] }
tokio = { version = "1.43.0", default-features = false, features = ["full"] }
toml = { version = "0.8.19", default-features = false, features = ["display", "parse"] }
tonic = { version = "0.11", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
tonic-build = { version = "0.11", default-features = false, features = ["transport", "prost"] }
uuid = { version = "1.11.1", features = ["v4", "v7", "serde"] }
vector-lib = { path = "lib/vector-lib", default-features = false, features = ["vrl"] }
vector-config = { path = "lib/vector-config" }
vector-config-common = { path = "lib/vector-config-common" }
vector-config-macros = { path = "lib/vector-config-macros" }
vrl = { git = "https://github.com/vectordotdev/vrl", branch = "main", features = ["arbitrary", "cli", "test", "test_framework"] }

[dependencies]
pin-project.workspace = true
clap.workspace = true
uuid.workspace = true
vrl.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
snafu.workspace = true

# Internal libs
dnsmsg-parser = { path = "lib/dnsmsg-parser", optional = true }
dnstap-parser = { path = "lib/dnstap-parser", optional = true }
fakedata = { path = "lib/fakedata", optional = true }
portpicker = { path = "lib/portpicker" }
tracing-limit = { path = "lib/tracing-limit" }
vector-common = { path = "lib/vector-common", default-features = false}
vector-lib.workspace = true
vector-config.workspace = true
vector-config-common.workspace = true
vector-config-macros.workspace = true
vector-vrl-functions = { path = "lib/vector-vrl/functions" }
loki-logproto = { path = "lib/loki-logproto", optional = true }

# Tokio / Futures
async-stream = { version = "0.3.6", default-features = false }
async-trait = { version = "0.1.85", default-features = false }
futures.workspace = true
tokio = { version = "1.43.0", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.5", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
console-subscriber = { version = "0.4.1", default-features = false, optional = true }

# Tracing
tracing = { version = "0.1.34", default-features = false }
tracing-core = { version = "0.1.26", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "tracing-log"] }
tracing-tower = { git = "https://github.com/tokio-rs/tracing", default-features = false, rev = "e0642d949891546a3bb7e47080365ee7274f05cd" }

# Metrics
metrics.workspace = true
metrics-tracing-context.workspace = true

# AWS - Official SDK
aws-sdk-s3 = { version = "1.4.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-sqs = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-sns = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-cloudwatch = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-cloudwatchlogs = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-elasticsearch = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-firehose = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-kinesis = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-secretsmanager = { version = "1.3.0", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
# The sts crate is needed despite not being referred to anywhere in the code because we need to set the
# `behavior-version-latest` feature. Without this we get a runtime panic when `auth.assume_role` authentication
# is configured.
aws-sdk-sts = { version = "1.3.1", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-types = { version = "1.3.3", default-features = false, optional = true }
aws-sigv4 = { version = "1.2.6", default-features = false, features = ["sign-http"], optional = true }
aws-config = { version = "~1.0.1", default-features = false, features = ["behavior-version-latest", "credentials-process", "sso", "rt-tokio"], optional = true }
aws-credential-types = { version = "1.2.1", default-features = false, features = ["hardcoded-credentials"], optional = true }
aws-smithy-http = { version = "0.60", default-features = false, features = ["event-stream", "rt-tokio"], optional = true }
aws-smithy-types = { version = "1.2.11", default-features = false, features = ["rt-tokio"], optional = true }
aws-smithy-runtime-api = { version = "1.7.3", default-features = false, optional = true }
aws-smithy-runtime = { version = "1.7.4", default-features = false, features = ["client", "connector-hyper-0-14-x", "rt-tokio"], optional = true }
aws-smithy-async = { version = "1.2.3", default-features = false, features = ["rt-tokio"], optional = true }

# Azure
azure_core = { version = "0.17", default-features = false, features = ["enable_reqwest"], optional = true }
azure_identity = { version = "0.17", default-features = false, features = ["enable_reqwest"], optional = true }
azure_storage = { version = "0.17", default-features = false, optional = true }
azure_storage_blobs = { version = "0.17", default-features = false, optional = true }

# OpenDAL
opendal = { version = "0.45", default-features = false, features = ["native-tls", "services-webhdfs"], optional = true }

# Tower
tower = { version = "0.4.13", default-features = false, features = ["buffer", "limit", "retry", "timeout", "util", "balance", "discover"] }
tower-http = { version = "0.4.4", default-features = false, features = ["compression-full", "decompression-gzip", "trace"] }
# Serde
serde.workspace = true
serde-toml-merge = { version = "0.3.8", default-features = false }
serde_bytes = { version = "0.11.15", default-features = false, features = ["std"], optional = true }
serde_json.workspace = true
serde_with = { version = "3.12.0", default-features = false, features = ["macros", "std"] }
serde_yaml = { version = "0.9.34", default-features = false }

# Messagepack
rmp-serde = { version = "1.3.0", default-features = false, optional = true }
rmpv = { version = "1.3.0", default-features = false, features = ["with-serde"], optional = true }

# Prost / Protocol Buffers
prost = { workspace = true, optional = true }
prost-reflect = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# GCP
goauth = { version = "0.14.0", optional = true }
smpl_jwt = { version = "0.8.0", default-features = false, optional = true }

# AMQP
lapin = { version = "2.5.0", default-features = false, features = ["native-tls"], optional = true }

# API
async-graphql = { version = "7.0.7", default-features = false, optional = true, features = ["chrono", "playground"] }
async-graphql-warp = { version = "7.0.7", default-features = false, optional = true }

# API client
crossterm = { version = "0.28.1", default-features = false, features = ["event-stream", "windows"], optional = true }
num-format = { version = "0.4.4", default-features = false, features = ["with-num-bigint"], optional = true }
number_prefix = { version = "0.4.0", default-features = false, features = ["std"], optional = true }
ratatui = { version = "0.29.0", optional = true, default-features = false, features = ["crossterm"] }

# Opentelemetry

hex = { version = "0.4.3", default-features = false, optional = true }

# GreptimeDB
greptimedb-ingester = { git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust", rev = "2e6b0c5eb6a5e7549c3100e4d356b07d15cce66d", optional = true }

# External libs
arc-swap = { version = "1.7", default-features = false, optional = true }
async-compression = { version = "0.4.18", default-features = false, features = ["tokio", "gzip", "zstd"], optional = true }
apache-avro = { version = "0.16.0", default-features = false, optional = true }
axum = { version = "0.6.20", default-features = false }
base64 = { version = "0.22.1", default-features = false, optional = true }
bloomy = { version = "1.2.0", default-features = false, optional = true }
bollard = { version = "0.16.1", default-features = false, features = ["ssl", "chrono"], optional = true }
bytes = { version = "1.9.0", default-features = false, features = ["serde"] }
bytesize = { version = "1.3.0", default-features = false }
chrono.workspace = true
chrono-tz.workspace = true
colored = { version = "3.0.0", default-features = false }
csv = { version = "1.3", default-features = false }
databend-client = { version = "0.22.2", default-features = false, features = ["rustls"], optional = true }
derivative = { version = "2.2.0", default-features = false }
dirs-next = { version = "2.0.0", default-features = false, optional = true }
dyn-clone = { version = "1.0.17", default-features = false }
encoding_rs = { version = "0.8.35", default-features = false, features = ["serde"] }
enum_dispatch = { version = "0.3.13", default-features = false }
exitcode = { version = "1.1.2", default-features = false }
flate2.workspace = true
futures-util = { version = "0.3.29", default-features = false }
glob.workspace = true
governor = { version = "0.7.0", default-features = false, features = ["dashmap", "jitter", "std"], optional = true }
h2 = { version = "0.4.7", default-features = false, optional = true }
hash_hasher = { version = "2.0.0", default-features = false }
hashbrown = { version = "0.14.5", default-features = false, optional = true, features = ["ahash"] }
headers = { version = "0.3.9", default-features = false }
hostname = { version = "0.4.0", default-features = false }
http = { version = "0.2.9", default-features = false }
http-1 = { package = "http", version = "1.0", default-features = false, features = ["std"] }
http-serde = "1.1.3"
http-body = { version = "0.4.5", default-features = false }
hyper = { version = "0.14.28", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
hyper-openssl = { version = "0.9.2", default-features = false }
hyper-proxy = { version = "0.9.1", default-features = false, features = ["openssl-tls"] }
indexmap.workspace = true
indoc = { version = "2.0.5", default-features = false }
inventory = { version = "0.3.17", default-features = false }
ipnet = { version = "2", default-features = false, optional = true, features = ["serde", "std"] }
itertools = { version = "0.14.0", default-features = false, optional = false, features = ["use_alloc"] }
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_26"], optional = true }
kube = { version = "0.93.0", default-features = false, features = ["client", "openssl-tls", "runtime"], optional = true }
listenfd = { version = "1.0.1", default-features = false, optional = true }
lru = { version = "0.12.5", default-features = false, optional = true }
maxminddb = { version = "0.24.0", default-features = false, optional = true }
md-5 = { version = "0.10", default-features = false, optional = true }
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"], optional = true }
async-nats = { version = "0.33.0", default-features = false, optional = true }
nkeys = { version = "0.4.4", default-features = false, optional = true }
nom = { version = "7.1.3", default-features = false, optional = true }
notify = { version = "7.0.0", default-features = false, features = ["macos_fsevent"] }
openssl = { version = "0.10.68", default-features = false, features = ["vendored"] }
openssl-probe = { version = "0.1.5", default-features = false }
ordered-float = { version = "4.6.0", default-features = false }
paste = "1.0.15"
percent-encoding = { version = "2.3.1", default-features = false }
postgres-openssl = { version = "0.5.0", default-features = false, features = ["runtime"], optional = true }
pulsar = { version = "6.3.0", default-features = false, features = ["tokio-runtime", "auth-oauth2", "flate2", "lz4", "snap", "zstd"], optional = true }
rand.workspace = true
rand_distr = { version = "0.4.3", default-features = false }
rdkafka = { version = "0.37.0", default-features = false, features = ["curl-static", "tokio", "libz", "ssl", "zstd"], optional = true }
redis = { version = "0.24.0", default-features = false, features = ["connection-manager", "tokio-comp", "tokio-native-tls-comp"], optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
roaring = { version = "0.10.10", default-features = false, features = ["std"], optional = true }
rumqttc = { version = "0.24.0", default-features = false, features = ["use-rustls"], optional = true }
seahash = { version = "4.1.0", default-features = false }
semver = { version = "1.0.24", default-features = false, features = ["serde", "std"], optional = true }
smallvec = { version = "1", default-features = false, features = ["union", "serde"] }
snap = { version = "1.1.1", default-features = false }
socket2 = { version = "0.5.8", default-features = false }
stream-cancel = { version = "0.8.2", default-features = false }
strip-ansi-escapes = { version = "0.2.0", default-features = false }
syslog = { version = "6.1.1", default-features = false, optional = true }
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tokio-postgres = { version = "0.7.12", default-features = false, features = ["runtime", "with-chrono-0_4"], optional = true }
tokio-tungstenite = { version = "0.20.1", default-features = false, features = ["connect"], optional = true }
toml.workspace = true
tonic = { workspace = true, optional = true }
hickory-proto = { workspace = true, optional = true }
typetag = { version = "0.2.19", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
warp = { version = "0.3.7", default-features = false }
zstd = { version = "0.13.0", default-features = false }
arr_macro = { version = "0.2.1" }

# depending on fork for bumped nix dependency
# https://github.com/heim-rs/heim/pull/360
heim = { git = "https://github.com/vectordotdev/heim.git", branch = "update-nix", default-features = false, features = ["disk"] }

# make sure to update the external docs when the Lua version changes
mlua = { version = "0.10.2", default-features = false, features = ["lua54", "send", "vendored", "macros"], optional = true }
sysinfo = "0.32.1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["socket", "signal"] }

[build-dependencies]
prost-build = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }
# update 'openssl_version' in website/config.toml whenever <major.minor> version changes
openssl-src = { version = "300", default-features = false, features = ["force-engine", "legacy"] }

[dev-dependencies]
approx = "0.5.1"
assert_cmd = { version = "2.0.16", default-features = false }
aws-smithy-runtime = { version = "1.7.4", default-features = false, features = ["tls-rustls"] }
azure_core = { version = "0.17", default-features = false, features = ["enable_reqwest", "azurite_workaround"] }
azure_identity = { version = "0.17", default-features = false, features = ["enable_reqwest"] }
azure_storage_blobs = { version = "0.17", default-features = false, features = ["azurite_workaround"] }
azure_storage = { version = "0.17", default-features = false }
base64 = "0.22.1"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
libc = "0.2.167"
similar-asserts = "1.6.0"
proptest.workspace = true
quickcheck = "1.0.3"
reqwest = { version = "0.11", features = ["json"] }
rstest = { version = "0.24.0" }
tempfile = "3.15.0"
test-generator = "0.3.1"
tokio = { version = "1.43.0", features = ["test-util"] }
tokio-test = "0.4.4"
tower-test = "0.4.0"
vector-lib = { workspace = true, features = ["test"] }
vrl.workspace = true

wiremock = "0.6.2"
zstd = { version = "0.13.0", default-features = false }

[patch.crates-io]
# The upgrade for `tokio-util` >= 0.6.9 is blocked on https://github.com/vectordotdev/vector/issues/11257.
tokio-util = { git = "https://github.com/vectordotdev/tokio", branch = "tokio-util-0.7.13-framed-read-continue-on-error" }
nix = { git = "https://github.com/vectordotdev/nix.git", branch = "memfd/gnu/musl" }
# The `heim` crates depend on `ntapi` 0.3.7 on Windows, but that version has an
# unaligned access bug fixed in the following revision.
ntapi = { git = "https://github.com/MSxDOS/ntapi.git", rev = "24fc1e47677fc9f6e38e5f154e6011dc9b270da6" }

[features]
# Default features for *-unknown-linux-gnu and *-apple-darwin
default = ["api", "api-client", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
# Default features for `cargo docs`. The same as `default` but without `rdkafka?/gssapi-vendored` which would require installing libsasl in our doc build environment.
docs = ["api", "api-client", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
# Default features for *-unknown-linux-* which make use of `cmake` for dependencies
default-cmake = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
# Default features for *-pc-windows-msvc
# TODO: Enable SASL https://github.com/vectordotdev/vector/pull/3081#issuecomment-659298042
default-msvc = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "transforms", "secrets"]
default-musl = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
default-no-api-client = ["api", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
default-no-vrl-cli = ["api", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

# Enables the binary secret-backend-example
secret-backend-example = ["transforms"]

all-logs = ["sinks-logs", "sources-logs", "sources-dnstap", "transforms-logs"]
all-metrics = ["sinks-metrics", "sources-metrics", "transforms-metrics"]

# Target specific release features.
# The `make` tasks will select this according to the appropriate triple.
# Use this section to turn off or on specific features for specific triples.
target-aarch64-unknown-linux-gnu = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
target-aarch64-unknown-linux-musl = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
target-armv7-unknown-linux-gnueabihf = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
target-armv7-unknown-linux-musleabihf = ["api", "api-client", "rdkafka?/cmake_build", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "secrets"]
target-arm-unknown-linux-gnueabi = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
target-arm-unknown-linux-musleabi = ["api", "api-client", "rdkafka?/cmake_build", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "secrets"]
target-x86_64-unknown-linux-gnu = ["api", "api-client", "rdkafka?/cmake_build", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "unix", "rdkafka?/gssapi-vendored", "secrets"]
target-x86_64-unknown-linux-musl = ["api", "api-client", "rdkafka?/cmake_build", "enrichment-tables", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
# Does not currently build
target-powerpc64le-unknown-linux-gnu = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]
# Currently doesn't build due to lack of support for 64-bit atomics
target-powerpc-unknown-linux-gnu = ["api", "api-client", "enrichment-tables", "rdkafka?/cmake_build", "sinks", "sources", "sources-dnstap", "transforms", "unix", "secrets"]

# Enables features that work only on systems providing `cfg(unix)`
unix = ["tikv-jemallocator", "allocation-tracing"]
allocation-tracing = []

# Enables kubernetes dependencies and shared code. Kubernetes-related sources,
# transforms and sinks should depend on this feature.
kubernetes = ["dep:k8s-openapi", "dep:kube"]

docker = ["dep:bollard", "dep:dirs-next"]

# API
api = [
  "dep:async-graphql",
  "dep:async-graphql-warp",
  "dep:base64",
  "vector-lib/api",
]

# API client
api-client = [
  "dep:crossterm",
  "dep:num-format",
  "dep:number_prefix",
  "dep:ratatui",
  "vector-lib/api",
  "vector-lib/api-client",
]

aws-core = [
  "aws-config",
  "dep:aws-credential-types",
  "dep:aws-sigv4",
  "dep:aws-types",
  "dep:aws-smithy-async",
  "dep:aws-smithy-http",
  "dep:aws-smithy-types",
  "dep:aws-smithy-runtime",
  "dep:aws-smithy-runtime-api",
  "dep:aws-sdk-sts",
]

# Anything that requires Protocol Buffers.
protobuf-build = ["dep:tonic-build", "dep:prost-build"]

gcp = ["dep:base64", "dep:goauth", "dep:smpl_jwt"]

# Enrichment Tables
enrichment-tables = ["enrichment-tables-geoip", "enrichment-tables-mmdb"]
enrichment-tables-geoip = ["dep:maxminddb"]
enrichment-tables-mmdb = ["dep:maxminddb"]

# Codecs
codecs-syslog = ["vector-lib/syslog"]

# Secrets
secrets = ["secrets-aws-secrets-manager"]

secrets-aws-secrets-manager = ["aws-core", "dep:aws-sdk-secretsmanager"]

# Sources
sources = ["sources-logs", "sources-metrics"]
sources-logs = [
  "sources-amqp",
  "sources-aws_kinesis_firehose",
  "sources-aws_s3",
  "sources-aws_sqs",
  "sources-datadog_agent",
  "sources-demo_logs",
  "sources-docker_logs",
  "sources-exec",
  "sources-file",
  "sources-fluent",
  "sources-gcp_pubsub",
  "sources-heroku_logs",
  "sources-http_server",
  "sources-http_client",
  "sources-internal_logs",
  "sources-journald",
  "sources-kafka",
  "sources-kubernetes_logs",
  "sources-logstash",
  "sources-nats",
  "sources-opentelemetry",
  "sources-pulsar",
  "sources-file_descriptor",
  "sources-redis",
  "sources-socket",
  "sources-splunk_hec",
  "sources-stdin",
  "sources-syslog",
  "sources-vector",
]
sources-metrics = [
  "dep:prost",
  "sources-apache_metrics",
  "sources-aws_ecs_metrics",
  "sources-eventstoredb_metrics",
  "sources-host_metrics",
  "sources-internal_metrics",
  "sources-mongodb_metrics",
  "sources-nginx_metrics",
  "sources-postgresql_metrics",
  "sources-prometheus",
  "sources-static_metrics",
  "sources-statsd",
  "sources-vector",
]

sources-amqp = ["lapin"]
sources-apache_metrics = ["sources-utils-http-client"]
sources-aws_ecs_metrics = ["sources-utils-http-client"]
sources-aws_kinesis_firehose = ["dep:base64"]
sources-aws_s3 = ["aws-core", "dep:aws-sdk-sqs", "dep:aws-sdk-s3", "dep:semver", "dep:async-compression", "sources-aws_sqs", "tokio-util/io"]
sources-aws_sqs = ["aws-core", "dep:aws-sdk-sqs"]
sources-datadog_agent = ["sources-utils-http-error", "protobuf-build", "dep:prost"]
sources-demo_logs = ["dep:fakedata"]
sources-dnstap = ["sources-utils-net-tcp", "dep:base64", "dep:hickory-proto", "dep:dnsmsg-parser", "dep:dnstap-parser", "protobuf-build", "dep:prost"]
sources-docker_logs = ["docker"]
sources-eventstoredb_metrics = []
sources-exec = []
sources-file = ["vector-lib/file-source"]
sources-file_descriptor = ["tokio-util/io"]
sources-fluent = ["dep:base64", "sources-utils-net-tcp", "tokio-util/net", "dep:rmpv", "dep:rmp-serde", "dep:serde_bytes"]
sources-gcp_pubsub = ["gcp", "dep:h2", "dep:prost", "dep:prost-types", "protobuf-build", "dep:tonic"]
sources-heroku_logs = ["sources-utils-http", "sources-utils-http-query", "sources-http_server"]
sources-host_metrics = ["heim/cpu", "heim/host", "heim/memory", "heim/net"]
sources-http_client = ["sources-utils-http-client"]
sources-http_server = ["sources-utils-http", "sources-utils-http-headers", "sources-utils-http-query"]
sources-internal_logs = []
sources-internal_metrics = []
sources-static_metrics = []
sources-journald = []
sources-kafka = ["dep:rdkafka"]
sources-kubernetes_logs = ["vector-lib/file-source", "kubernetes", "transforms-reduce"]
sources-logstash = ["sources-utils-net-tcp", "tokio-util/net"]
sources-mongodb_metrics = ["dep:mongodb"]
sources-nats = ["dep:async-nats", "dep:nkeys"]
sources-nginx_metrics = ["dep:nom"]
sources-opentelemetry = ["dep:hex", "vector-lib/opentelemetry", "dep:prost", "dep:prost-types", "sources-http_server", "sources-utils-http", "sources-utils-http-headers", "sources-vector"]
sources-postgresql_metrics = ["dep:postgres-openssl", "dep:tokio-postgres"]
sources-prometheus = ["sources-prometheus-scrape", "sources-prometheus-remote-write", "sources-prometheus-pushgateway"]
sources-prometheus-scrape = ["sinks-prometheus", "sources-utils-http-client", "vector-lib/prometheus"]
sources-prometheus-remote-write = ["sinks-prometheus", "sources-utils-http", "vector-lib/prometheus"]
sources-prometheus-pushgateway = ["sinks-prometheus", "sources-utils-http", "vector-lib/prometheus"]
sources-pulsar = ["dep:apache-avro", "dep:pulsar"]
sources-redis = ["dep:redis"]
sources-socket = ["sources-utils-net", "tokio-util/net"]
sources-splunk_hec = ["dep:roaring"]
sources-statsd = ["sources-utils-net", "tokio-util/net"]
sources-stdin = ["tokio-util/io"]
sources-syslog = ["codecs-syslog", "sources-utils-net", "tokio-util/net"]
sources-utils-http = ["sources-utils-http-auth", "sources-utils-http-encoding", "sources-utils-http-error", "sources-utils-http-prelude"]
sources-utils-http-auth = ["sources-utils-http-error"]
sources-utils-http-encoding = ["sources-utils-http-error"]
sources-utils-http-error = []
sources-utils-http-headers = []
sources-utils-http-prelude = ["sources-utils-http", "sources-utils-http-auth", "sources-utils-http-encoding", "sources-utils-http-error"]
sources-utils-http-query = []
sources-utils-http-client = ["sources-utils-http", "sources-http_server"]
sources-utils-net = ["sources-utils-net-tcp", "sources-utils-net-udp", "sources-utils-net-unix"]
sources-utils-net-tcp = ["listenfd", "dep:ipnet"]
sources-utils-net-udp = ["listenfd"]
sources-utils-net-unix = []

sources-vector = ["dep:prost", "dep:tonic", "protobuf-build"]

# Transforms
transforms = ["transforms-logs", "transforms-metrics"]
transforms-logs = [
  "transforms-aws_ec2_metadata",
  "transforms-dedupe",
  "transforms-filter",
  "transforms-log_to_metric",
  "transforms-lua",
  "transforms-metric_to_log",
  "transforms-reduce",
  "transforms-remap",
  "transforms-route",
  "transforms-exclusive-route",
  "transforms-sample",
  "transforms-throttle",
]
transforms-metrics = [
  "transforms-aggregate",
  "transforms-filter",
  "transforms-log_to_metric",
  "transforms-lua",
  "transforms-metric_to_log",
  "transforms-remap",
  "transforms-tag_cardinality_limit",
  "transforms-throttle",
]

transforms-aggregate = []
transforms-aws_ec2_metadata = ["dep:arc-swap"]
transforms-dedupe = ["transforms-impl-dedupe"]
transforms-filter = []
transforms-log_to_metric = []
transforms-lua = ["dep:mlua", "vector-lib/lua"]
transforms-metric_to_log = []
transforms-reduce = ["transforms-impl-reduce"]
transforms-remap = []
transforms-route = []
transforms-exclusive-route = []
transforms-sample = ["transforms-impl-sample"]
transforms-tag_cardinality_limit = ["dep:bloomy", "dep:hashbrown"]
transforms-throttle = ["dep:governor"]

# Implementations of transforms
transforms-impl-sample = []
transforms-impl-dedupe = ["dep:lru"]
transforms-impl-reduce = []

# Sinks
sinks = ["sinks-logs", "sinks-metrics"]
sinks-logs = [
  "sinks-amqp",
  "sinks-appsignal",
  "sinks-aws_cloudwatch_logs",
  "sinks-aws_kinesis_firehose",
  "sinks-aws_kinesis_streams",
  "sinks-aws_s3",
  "sinks-aws_sns",
  "sinks-aws_sqs",
  "sinks-axiom",
  "sinks-azure_blob",
  "sinks-azure_monitor_logs",
  "sinks-blackhole",
  "sinks-chronicle",
  "sinks-clickhouse",
  "sinks-console",
  "sinks-databend",
  "sinks-datadog_events",
  "sinks-datadog_logs",
  "sinks-datadog_traces",
  "sinks-elasticsearch",
  "sinks-file",
  "sinks-gcp",
  "sinks-greptimedb_logs",
  "sinks-honeycomb",
  "sinks-http",
  "sinks-humio",
  "sinks-influxdb",
  "sinks-kafka",
  "sinks-loki",
  "sinks-mezmo",
  "sinks-mqtt",
  "sinks-nats",
  "sinks-new_relic",
  "sinks-new_relic_logs",
  "sinks-opentelemetry",
  "sinks-papertrail",
  "sinks-pulsar",
  "sinks-redis",
  "sinks-sematext",
  "sinks-socket",
  "sinks-splunk_hec",
  "sinks-vector",
  "sinks-webhdfs",
  "sinks-websocket",
  "sinks-websocket-server",
]
sinks-metrics = [
  "sinks-appsignal",
  "sinks-aws_cloudwatch_metrics",
  "sinks-blackhole",
  "sinks-console",
  "sinks-datadog_metrics",
  "sinks-greptimedb_metrics",
  "sinks-humio",
  "sinks-influxdb",
  "sinks-kafka",
  "sinks-prometheus",
  "sinks-sematext",
  "sinks-statsd",
  "sinks-vector",
  "sinks-splunk_hec"
]

sinks-amqp = ["lapin"]
sinks-appsignal = []
sinks-aws_cloudwatch_logs = ["aws-core", "dep:aws-sdk-cloudwatchlogs"]
sinks-aws_cloudwatch_metrics = ["aws-core", "dep:aws-sdk-cloudwatch"]
sinks-aws_kinesis_firehose = ["aws-core", "dep:aws-sdk-firehose"]
sinks-aws_kinesis_streams = ["aws-core", "dep:aws-sdk-kinesis"]
sinks-aws_s3 = ["dep:base64", "dep:md-5", "aws-core", "dep:aws-sdk-s3"]
sinks-aws_sqs = ["aws-core", "dep:aws-sdk-sqs"]
sinks-aws_sns = ["aws-core", "dep:aws-sdk-sns"]
sinks-axiom = ["sinks-http"]
sinks-azure_blob = ["dep:azure_core", "dep:azure_identity", "dep:azure_storage", "dep:azure_storage_blobs"]
sinks-azure_monitor_logs = []
sinks-blackhole = []
sinks-chronicle = []
sinks-clickhouse = []
sinks-console = []
sinks-databend = ["dep:databend-client"]
sinks-datadog_events = []
sinks-datadog_logs = []
sinks-datadog_metrics = ["protobuf-build", "dep:prost", "dep:prost-reflect"]
sinks-datadog_traces = ["protobuf-build", "dep:prost", "dep:rmpv", "dep:rmp-serde", "dep:serde_bytes"]
sinks-elasticsearch = ["transforms-metric_to_log"]
sinks-file = ["dep:async-compression"]
sinks-gcp = ["sinks-gcp-chronicle", "dep:base64", "gcp"]
sinks-gcp-chronicle = ["gcp"]
sinks-greptimedb_metrics = ["dep:greptimedb-ingester"]
sinks-greptimedb_logs = ["dep:greptimedb-ingester"]
sinks-honeycomb = []
sinks-http = []
sinks-humio = ["sinks-splunk_hec", "transforms-metric_to_log"]
sinks-influxdb = []
sinks-kafka = ["dep:rdkafka"]
sinks-mezmo = []
sinks-loki = ["loki-logproto"]
sinks-mqtt = ["dep:rumqttc"]
sinks-nats = ["dep:async-nats", "dep:nkeys"]
sinks-new_relic_logs = ["sinks-http"]
sinks-new_relic = []
sinks-opentelemetry = ["sinks-http"]
sinks-papertrail = ["dep:syslog"]
sinks-prometheus = ["dep:base64", "dep:prost", "vector-lib/prometheus"]
sinks-pulsar = ["dep:apache-avro", "dep:pulsar", "dep:lru"]
sinks-redis = ["dep:redis"]
sinks-sematext = ["sinks-elasticsearch", "sinks-influxdb"]
sinks-socket = ["sinks-utils-udp"]
sinks-splunk_hec = []
sinks-statsd = ["sinks-utils-udp", "tokio-util/net"]
sinks-utils-udp = []
sinks-vector = ["sinks-utils-udp", "dep:tonic", "protobuf-build", "dep:prost"]
sinks-websocket = ["dep:tokio-tungstenite"]
sinks-websocket-server = ["dep:tokio-tungstenite", "sources-utils-http-auth",
"sources-utils-http-error", "sources-utils-http-prelude"]
sinks-webhdfs = ["dep:opendal"]

# Identifies that the build is a nightly build
nightly = []

# Integration testing-related features
all-integration-tests = [
  "amqp-integration-tests",
  "appsignal-integration-tests",
  "aws-integration-tests",
  "axiom-integration-tests",
  "azure-integration-tests",
  "chronicle-integration-tests",
  "clickhouse-integration-tests",
  "databend-integration-tests",
  "datadog-agent-integration-tests",
  "datadog-logs-integration-tests",
  "datadog-metrics-integration-tests",
  "datadog-traces-integration-tests",
  "dnstap-integration-tests",
  "docker-logs-integration-tests",
  "es-integration-tests",
  "eventstoredb_metrics-integration-tests",
  "fluent-integration-tests",
  "gcp-cloud-storage-integration-tests",
  "gcp-integration-tests",
  "gcp-pubsub-integration-tests",
  "greptimedb-integration-tests",
  "http-client-integration-tests",
  "humio-integration-tests",
  "influxdb-integration-tests",
  "kafka-integration-tests",
  "logstash-integration-tests",
  "loki-integration-tests",
  "mongodb_metrics-integration-tests",
  "nats-integration-tests",
  "nginx-integration-tests",
  "opentelemetry-integration-tests",
  "postgresql_metrics-integration-tests",
  "prometheus-integration-tests",
  "pulsar-integration-tests",
  "redis-integration-tests",
  "splunk-integration-tests",
  "webhdfs-integration-tests",
]

amqp-integration-tests = ["sources-amqp", "sinks-amqp"]
appsignal-integration-tests = ["sinks-appsignal"]

aws-integration-tests = [
  "aws-cloudwatch-logs-integration-tests",
  "aws-cloudwatch-metrics-integration-tests",
  "aws-ec2-metadata-integration-tests",
  "aws-ecs-metrics-integration-tests",
  "aws-kinesis-firehose-integration-tests",
  "aws-kinesis-streams-integration-tests",
  "aws-s3-integration-tests",
  "aws-sqs-integration-tests",
  "aws-sns-integration-tests",
]

azure-integration-tests = [
  "azure-blob-integration-tests"
]

aws-cloudwatch-logs-integration-tests = ["sinks-aws_cloudwatch_logs"]
aws-cloudwatch-metrics-integration-tests = ["sinks-aws_cloudwatch_metrics"]
aws-ec2-metadata-integration-tests = ["transforms-aws_ec2_metadata"]
aws-ecs-metrics-integration-tests = ["sources-aws_ecs_metrics"]
aws-kinesis-firehose-integration-tests = ["sinks-aws_kinesis_firehose", "dep:aws-sdk-elasticsearch", "sinks-elasticsearch"]
aws-kinesis-streams-integration-tests = ["sinks-aws_kinesis_streams"]
aws-s3-integration-tests = ["sinks-aws_s3", "sources-aws_s3"]
aws-sqs-integration-tests = ["sinks-aws_sqs"]
aws-sns-integration-tests = ["sinks-aws_sns"]
axiom-integration-tests = ["sinks-axiom"]
azure-blob-integration-tests = ["sinks-azure_blob"]
chronicle-integration-tests = ["sinks-gcp"]
clickhouse-integration-tests = ["sinks-clickhouse"]
databend-integration-tests = ["sinks-databend"]
datadog-agent-integration-tests = ["sources-datadog_agent"]
datadog-logs-integration-tests = ["sinks-datadog_logs"]
datadog-metrics-integration-tests = ["sinks-datadog_metrics", "dep:prost"]
datadog-traces-integration-tests = ["sources-datadog_agent", "sinks-datadog_traces", "axum/tokio"]
docker-logs-integration-tests = ["sources-docker_logs", "unix"]
es-integration-tests = ["sinks-elasticsearch", "aws-core"]
eventstoredb_metrics-integration-tests = ["sources-eventstoredb_metrics"]
fluent-integration-tests = ["docker", "sources-fluent"]
gcp-cloud-storage-integration-tests = ["sinks-gcp"]
gcp-integration-tests = ["sinks-gcp"]
gcp-pubsub-integration-tests = ["sinks-gcp", "sources-gcp_pubsub"]
greptimedb-integration-tests = ["sinks-greptimedb_metrics", "sinks-greptimedb_logs"]
humio-integration-tests = ["sinks-humio"]
http-client-integration-tests = ["sources-http_client"]
influxdb-integration-tests = ["sinks-influxdb"]
kafka-integration-tests = ["sinks-kafka", "sources-kafka"]
logstash-integration-tests = ["docker", "sources-logstash"]
loki-integration-tests = ["sinks-loki"]
mongodb_metrics-integration-tests = ["sources-mongodb_metrics"]
mqtt-integration-tests = ["sinks-mqtt"]
nats-integration-tests = ["sinks-nats", "sources-nats"]
nginx-integration-tests = ["sources-nginx_metrics"]
opentelemetry-integration-tests = ["sources-opentelemetry", "dep:prost"]
postgresql_metrics-integration-tests = ["sources-postgresql_metrics"]
prometheus-integration-tests = ["sinks-prometheus", "sources-prometheus", "sinks-influxdb"]
pulsar-integration-tests = ["sinks-pulsar", "sources-pulsar"]
redis-integration-tests = ["sinks-redis", "sources-redis"]
splunk-integration-tests = ["sinks-splunk_hec"]
dnstap-integration-tests = ["sources-dnstap", "dep:bollard"]
webhdfs-integration-tests = ["sinks-webhdfs"]
disable-resolv-conf = []
shutdown-tests = ["api", "sinks-blackhole", "sinks-console", "sinks-prometheus", "sources", "transforms-lua", "transforms-remap", "unix"]
cli-tests = ["sinks-blackhole", "sinks-socket", "sources-demo_logs", "sources-file"]
test-utils = []

# End-to-End testing-related features
all-e2e-tests = [
  "e2e-tests-datadog"
]

e2e-tests-datadog = [
  "sources-datadog_agent",
  "sinks-datadog_logs",
  "sinks-datadog_metrics"
]

vector-api-tests = [
  "sources-demo_logs",
  "transforms-log_to_metric",
  "transforms-remap",
  "sinks-blackhole"
]
vector-unit-test-tests = [
  "sources-demo_logs",
  "transforms-remap",
  "transforms-route",
  "transforms-filter",
  "transforms-reduce",
  "sinks-console"
]

component-validation-runner = ["dep:tonic", "sources-internal_logs", "sources-internal_metrics", "sources-vector", "sinks-vector"]
# For now, only include components that implement ValidatableComponent.
# In the future, this can change to simply reference the targets `sources`, `transforms`, `sinks`
component-validation-tests = [
  "component-validation-runner",
  "sources-http_client",
  "sources-http_server",
  "sinks-http",
  "sinks-splunk_hec",
  "sources-splunk_hec",
  "sinks-datadog_logs",
  "sources-datadog_agent",
]

# Grouping together features for benchmarks. We exclude the API client due to it causing the build process to run out
# of memory when those additional dependencies are built in CI.
benches = [
  "sinks-file",
  "sinks-http",
  "sinks-socket",
  "sources-file",
  "sources-socket",
  "sources-syslog",
  "transforms-lua",
  "transforms-sample",
]
dnstap-benches = ["sources-dnstap"]
language-benches = ["sinks-socket", "sources-socket", "transforms-lua", "transforms-remap"]
# Separate benching process for metrics due to the nature of the bootstrap procedures.
statistic-benches = []
remap-benches = ["transforms-remap"]
transform-benches = ["transforms-filter", "transforms-dedupe", "transforms-reduce", "transforms-route"]
codecs-benches = []
loki-benches = ["sinks-loki"]
enrichment-tables-benches = ["enrichment-tables-geoip", "enrichment-tables-mmdb"]
proptest = ["dep:proptest", "dep:proptest-derive", "vrl/proptest"]

[[bench]]
name = "default"
harness = false
required-features = ["benches"]

[[bench]]
name = "dnstap"
path = "benches/dnstap/mod.rs"
harness = false
required-features = ["dnstap-benches"]

[[bench]]
name = "remap"
harness = false
required-features = ["remap-benches"]

[[bench]]
name = "enrichment_tables"
harness = false
required-features = ["enrichment-tables-benches"]

[[bench]]
name = "languages"
harness = false
required-features = ["language-benches"]

[[bench]]
name = "loki"
harness = false
required-features = ["loki-benches"]

[[bench]]
name = "distribution_statistic"
harness = false
required-features = ["statistic-benches"]

[[bench]]
name = "transform"
path = "benches/transform/main.rs"
harness = false
test = false
required-features = ["transform-benches"]

[[bench]]
name = "codecs"
path = "benches/codecs/main.rs"
harness = false
required-features = ["codecs-benches"]
